Added function for need to fill in name, email and phone

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <h1>Contacts</h1>
   <button class="add-contact">Add Contact</button>
   <button class="cancel hide">Cancel</button>
+  <button class="clear">Clear all contacts</button>
+
   <div class="contact-list"></div>
 
   <form action="#" class="new-contact-form hide">
