--- a/index.html
+++ b/index.html
@@ -29,35 +29,21 @@
 
   <div class="contact-list"></div>
 
-  <button class="add-contact">Add New Contact</button>
-
   <form action="#" class="new-contact-form hide">
-    <div class="item text">
-      <label>Name</label>
-      <div class="field"><input type="text" name="name" /></div>
-    </div>
+      <label for="name">Name</label>
+      <input id="contact-name" name="name" type="text">
+      <label for="email">Email</label>
+      <input id="contact-email" name="email" type="email">
+      <label for="phone">Phone</label>
+      <input id="contact-phone" name="phone" type="text">
+      <label for="company">Company</label>
+      <input id="contact-company" name="company" type="text">
+      <label for="twitter">Twitter</label>
+      <input id="contact-twitter" name="twitter" type="text">
+      <button class="save-contact hide" type="submit" value="Save contact">Save Contact</button>
+    </form>
 
-    <div class="item text">
-      <label>Email</label>
-      <div class="field"><input type="text" name="email" /></div>
-    </div>
-
-    <div class="item text">
-      <label>Phone</label>
-      <div class="field"><input type="text" name="phone" /></div>
-    </div>
-
-    <div class="item text">
-      <label>Company</label>
-      <div class="field"><input type="text" name="company" /></div>
-    </div>
-
-    <div class="item text">
-      <label>Twitter</label>
-      <div class="field"><input type="text" name="email" /></div>
-    </div>
-
-    <button class="save-contact">Save Contact</button>
+    <button class="add-contact">Add New Contact</button>
     <button class="cancel hide">Cancel</button>
 
   <script src="./dist/bundle.js"></script>
