Added more design and fixed error with saving 2 users

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <tr class="contacts-head">
       <th>ID</th>
       <th>Name</th>
-      <th>Phone</th>
       <th>Email</th>
+      <th>Phone</th>
       <th>Actions</th>
     </tr>
   </table>
@@ -35,10 +35,10 @@
       <label for="twitter">Twitter</label>
       <input id="contact-twitter" name="twitter" type="text">
       <button class="save-contact" type="submit" value="Save contact">Save Contact</button>
+      <button class="cancel">Cancel</button>
     </form>
 
     <button class="add-contact">Add New Contact</button>
-    <button class="cancel hide">Cancel</button>
 
   <script src="./dist/bundle.js"></script>
 
