--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
   <div class="contact-list"></div>
 
   <form action="#" class="new-contact-form hide">
-      <label for="name">Name</label>
+      <label for="name">Name:</label>
       <input id="contact-name" name="name" type="text">
-      <label for="email">Email</label>
+      <label for="email">Email:</label>
       <input id="contact-email" name="email" type="email">
-      <label for="phone">Phone</label>
+      <label for="phone">Phone:</label>
       <input id="contact-phone" name="phone" type="text">
-      <label for="company">Company</label>
+      <label for="company">Company:</label>
       <input id="contact-company" name="company" type="text">
-      <label for="twitter">Twitter</label>
+      <label for="twitter">Twitter:</label>
       <input id="contact-twitter" name="twitter" type="text">
       <button class="save-contact" type="submit" value="Save contact">Save Contact</button>
       <button class="cancel">Cancel</button>
