Added test for form validation. And added messages to success or fail to add contact

--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@
       <label for="twitter">Twitter:</label>
       <input id="contact-twitter" name="twitter" type="text">
       <button class="save-contact" type="submit" value="Save contact">Save Contact</button>
-      <button class="cancel">Cancel</button>
     </form>
 
+    <button class="cancel hide">Cancel</button>
     <button class="add-contact">Add New Contact</button>
 
+  <p id="message"></p>
   <script src="./dist/bundle.js"></script>
 
 
